--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,12 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto);
+
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0 10px;
 }
 
 .decl {
-    background-color: #f0f0f0;
-    border-bottom: 1px solid #c0c0c0;
+    background-color: #f5f5f5;
     padding: 2px 5px;
     margin: 10px -10px;
 }
@@ -18,23 +19,23 @@ body {
     color: #2020f0;
 }
 
+a, a:visited, a:active {
+    color: #c4953a;
+    text-decoration: none;
+}
+
 #header, #footer {
-    background-color: #e0f0ff;
+    background-color: #1d222d;
     padding: 10px;
+    color: white;
 }
 
 #header {
-    border-bottom: 2px solid lightblue;
     margin: 0 -10px;
 }
 
 #footer {
-    border-top: 2px solid lightblue;
     margin: 10px -10px -10px -10px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
 }
 
 .typeclass .decl {
